force-app/main/default/objects/SAI_Application__c/SAI_Application__c.object-meta.xml
<CustomObject>
    <label>SAI Application</label>
    <nameField>
        <displayFormat>SAIAPP-{00000000}</displayFormat>
        <label>SAI Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAI Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>