force-app/main/default/objects/SAI_Application__c/fields/Agreement_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Activation_Date__c</fullName>
    <label>Agreement Activation Date</label>
    <type>Date</type>
</CustomField>