force-app/main/default/objects/SAI_Application__c/fields/Agreement_Original_Duration__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Original_Duration__c</fullName>
    <label>Agreement Original Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>