force-app/main/default/objects/SAI_Application__c/fields/Agreement_Rate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Rate_Percentage__c</fullName>
    <label>Agreement Rate Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>