force-app/main/default/objects/SAI_Application__c/fields/Application_Entry_System_Code__c.field-meta.xml
<CustomField>
    <fullName>Application_Entry_System_Code__c</fullName>
    <label>Application Entry System Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>