force-app/main/default/objects/SAI_Application__c/fields/Application_Internal_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Application_Internal_Status_Code__c</fullName>
    <label>Application Internal Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>