force-app/main/default/objects/SAI_Application__c/fields/Application_Internal_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Internal_Status_Date__c</fullName>
    <label>Application Internal Status Date</label>
    <type>Date</type>
</CustomField>