force-app/main/default/objects/SAI_Application__c/fields/Application_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Lost_Date__c</fullName>
    <label>Application Lost Date</label>
    <type>Date</type>
</CustomField>