force-app/main/default/objects/SAI_Application__c/fields/Application_Raised_Code__c.field-meta.xml
<CustomField>
    <fullName>Application_Raised_Code__c</fullName>
    <label>Application Raised Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>