force-app/main/default/objects/SAI_Application__c/fields/Application_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Registration_Date__c</fullName>
    <label>Application Registration Date</label>
    <type>Date</type>
</CustomField>