force-app/main/default/objects/SAI_Application__c/fields/Base_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Payment_Amount__c</fullName>
    <label>Base Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>