force-app/main/default/objects/SAI_Application__c/fields/Cost_of_funds_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_funds_Percentage__c</fullName>
    <label>Cost of funds Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>