force-app/main/default/objects/SAI_Application__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>