force-app/main/default/objects/SAI_Application__c/fields/External_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Description__c</fullName>
    <label>External Product Description</label>
    <type>TextArea</type>
</CustomField>