force-app/main/default/objects/SAI_Application__c/fields/External_Segment_Description__c.field-meta.xml
<CustomField>
    <fullName>External_Segment_Description__c</fullName>
    <label>External Segment Description</label>
    <type>TextArea</type>
</CustomField>