force-app/main/default/objects/SAI_Application__c/fields/External_Segment_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Segment_Number__c</fullName>
    <label>External Segment Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>