force-app/main/default/objects/SAI_Application__c/fields/Fee_For_Service_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Fee_For_Service_Indicator__c</fullName>
    <label>Fee For Service Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>