force-app/main/default/objects/SAI_Application__c/fields/Gross_Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Principal_Amount__c</fullName>
    <label>Gross Principal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>