force-app/main/default/objects/SAI_Application__c/fields/Hyperion_Base_Entity__c.field-meta.xml
<CustomField>
    <fullName>Hyperion_Base_Entity__c</fullName>
    <label>Hyperion Base Entity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>