force-app/main/default/objects/SAI_Application__c/fields/Issued_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_PO_Date__c</fullName>
    <label>Issued PO Date</label>
    <type>Date</type>
</CustomField>