force-app/main/default/objects/SAI_Application__c/fields/Leading_Application_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Leading_Application_Indicator__c</fullName>
    <label>Leading Application Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>