force-app/main/default/objects/SAI_Application__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>