force-app/main/default/objects/SAI_Application__c/fields/Payment_Frequency_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency_Code__c</fullName>
    <label>Payment Frequency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>