force-app/main/default/objects/SAI_Application__c/fields/Residual_Value_Amount__c.field-meta.xml
<CustomField>
    <fullName>Residual_Value_Amount__c</fullName>
    <label>Residual Value Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>