force-app/main/default/objects/SAI_Application__c/fields/Sales_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative_Name__c</fullName>
    <label>Sales Representative Name</label>
    <type>TextArea</type>
</CustomField>