force-app/main/default/objects/SAI_Application__c/fields/Sales_Representative_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative_Number__c</fullName>
    <label>Sales Representative Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>