force-app/main/default/objects/SAI_Application__c/fields/Seasonality_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Seasonality_Indicator__c</fullName>
    <label>Seasonality Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>