force-app/main/default/objects/SAI_Application__c/fields/System_Program_Description__c.field-meta.xml
<CustomField>
    <fullName>System_Program_Description__c</fullName>
    <label>System Program Description</label>
    <type>TextArea</type>
</CustomField>