force-app/main/default/objects/SAI_Application__c/fields/System_Selling_Party_Description__c.field-meta.xml
<CustomField>
    <fullName>System_Selling_Party_Description__c</fullName>
    <label>System Selling Party Description</label>
    <type>TextArea</type>
</CustomField>