force-app/main/default/objects/SAI_Application__c/fields/System_Selling_Party_Number__c.field-meta.xml
<CustomField>
    <fullName>System_Selling_Party_Number__c</fullName>
    <label>System Selling Party Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>