force-app/main/default/objects/SAI_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Number__c</columns>
    <columns>Base_Payment_Amount__c</columns>
    <columns>Agreement_Original_Duration__c</columns>
    <columns>Agreement_Rate_Percentage__c</columns>
    <columns>Application_Internal_Status_Code__c</columns>
    <columns>Net_Principal_Amount__c</columns>
    <columns>Application_Internal_Status_Date__c</columns>
    <columns>Application_Internal_Status_Detail_Code__c</columns>
    <columns>Application_Internal_Status_Detail_Date__c</columns>
    <columns>Application_Registration_Date__c</columns>
    <columns>Residual_Value_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>